--- a/EN/about-us.html
+++ b/EN/about-us.html
@@ -16,39 +16,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/javascript.js" defer></script>
-    <script src="js/navbar.js" defer></script>
-    <script src="js/gallery.js" defer></script>
+    <script src="../js/javascript.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/gallery.js" defer></script>
+
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="index.html"><img src="../img/logo.png"/></a>
 
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
           <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
             <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
             <li class="nav-item dropdown dropdown-backdrop">
-              <a class="nav__link dropdown-toggle hover" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Agencies
               </a>
               <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="agencies_bellinzona.html">Bellinzona</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Lugano</a></li>
+                <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
               </ul>
             </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
-            <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="../about-us.html" class="nav__link">IT</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
@@ -74,7 +75,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">lucarno</h1>
+      <h1 class="header--title">About Us</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
@@ -104,114 +105,38 @@
                     <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
                   </figure>
                 </div>
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
-                  </figure>
-                </div>
               </div>
             </div>
           </div>
-          <table>
-            <tr>
-              <td id="block" >Info</td>
-              <td>Our branch in Locarno has stood for you for over 5 years</td>
-            </tr>
-          </table>
-          <table>
-            <tr>
-              <td>Address :</td>
-              <td>Keltenstrasse 3, 3018 Bern</td>
-            </tr>
-            <tr>
-              <td>Phone number:</td>
-              <td>(+41) 79 897 42 58</td>
-            </tr>
-            <tr>
-              <td>Opening hours</td>
-              <td>
-                <table>
-                  <tr>
-                    <td>Mo - Fr :</td>
-                    <td>08:00 to 22:00 Clock</td>
-                  </tr>
-                  <tr>
-                    <td>Sa - So :</td>
-                    <td>08:00 to 22:00 Clock</td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-          <h3>menu</h3>
-          <div class="page-lucarno__menu">
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
 
-          </div>
-
+          <h3>MOGGI RESTAURANT</h3>
+          <P>We welcome you to sit back, unwind and appreciate the lovely sights and hints of the ocean
+              while our best gourmet expert sets you up a scrumptious dinner utilizing the best and 
+              freshest ingredients.’Company Name’ ‘s legacy comes from The parent  Restaurant which
+              was built up in 1963. ‘Organization Name’ was worked for people in general and has
+                advanced into a combination between exquisite chic and contemporary fine charge.
+            <br></br>
+            Enjoy our dazzling dishes and make the most of your eating background with us!</P>
+          <h5>Sustenance</h5>
+          <p>In case you’re searching for top notch food, ‘Organization Name’ is unquestionably one of the
+              spots to go in Port Elizabeth. The adaptable menu flaunts some imaginative food, for example,
+              salt and pepper squid on a delicate, Thai-roused plate of mixed greens; harissa angle soup 
+              (with the harissa glue served in a little glass); lemon simmered chicken on dark pepper gnocchi;
+                and a most heavenly cinnamon, fennel and ‘Friends Name’ frozen yogurt. The eatery utilizes 
+                neighborhood create for fish and venison dishes flourish.</p>
+          <h5>Wine</h5>
+          <p>The honor winning wine determination merits uncommon notice, both quaffer and specialist 
+            are all around provided food for. The determination have clearly been picked in light of the
+              menu, and numerous a wine darling’s heart will be heartened to see the decisions accessible.</p>
+          <h5>Service</h5>
+          <p>Administration is right on the money and what you would anticipate from a foundation of this 
+            bore: amazingly proficient and educated, inquiries concerning fixings are handed-off to the
+              cook and replied. The steady nearness of the director on floor adds to the accomplishment of 
+              the eatery.</p>
+          <h5>Climate</h5>
+          <p>The glass divider confronting the sea, unbiased shades, finished dividers and excellent fine 
+            art, just as lavish tablecloths and seats, all contribute toward an extravagant ordeal. 
+            The earthenware and cutlery are just delightful.</p>
         </section>
       </div>
     </main><!--        END OF MAIN           -->
