--- a/EN/agencies_bellinzona.html
+++ b/EN/agencies_bellinzona.html
@@ -16,19 +16,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/javascript.js" defer></script>
-    <script src="js/navbar.js" defer></script>
-    <script src="js/gallery.js" defer></script>
+    <script src="../js/javascript.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/gallery.js" defer></script>
+
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="index.html"><img src="../img/logo.png"/></a>
 
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
@@ -39,16 +40,16 @@
                 Agencies
               </a>
               <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="agencies_bellinzona.html">Bellinzona</a></li>
+                <li><a class="dropdown-item" href="#">Bellinzona</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Lugano</a></li>
+                <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
               </ul>
             </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="../agencies_bellinzona.html" class="nav__link">IT</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
@@ -74,7 +75,7 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">lucarno</h1>
+      <h1 class="header--title">bellinzona</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
@@ -108,9 +109,9 @@
                   <figure class="gallery__img-container">
                     <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
                   </figure>
-                </div>
               </div>
             </div>
+          </div>
           </div>
           <table>
             <tr>
@@ -146,7 +147,7 @@
           <h3>menu</h3>
           <div class="page-lucarno__menu">
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -154,7 +155,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -162,7 +163,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -170,7 +171,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -178,7 +179,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -186,7 +187,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -194,7 +195,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -202,7 +203,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
