--- a/EN/agencies_lucarno.html
+++ b/EN/agencies_lucarno.html
@@ -16,19 +16,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/javascript.js" defer></script>
-    <script src="js/navbar.js" defer></script>
-    <script src="js/gallery.js" defer></script>
+    <script src="../js/javascript.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/gallery.js" defer></script>
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="index.html"><img src="../img/logo.png"/></a>
 
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
@@ -47,8 +47,8 @@
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="../agencies_lucarno.html" class="nav__link">IT</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
@@ -146,7 +146,7 @@
           <h3>menu</h3>
           <div class="page-lucarno__menu">
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -154,7 +154,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -170,7 +170,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -178,7 +178,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -186,7 +186,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -194,7 +194,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
+              <img src="../img/menu_1.jpg" />
               <div>
                 <h3>Doner Kebab</h3>
                 <p>ghosht/kachalo/piyaz</p>
