--- a/EN/contact-us.html
+++ b/EN/contact-us.html
@@ -16,39 +16,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/javascript.js" defer></script>
-    <script src="js/navbar.js" defer></script>
-    <script src="js/gallery.js" defer></script>
+    <script src="../js/javascript.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 <body>
-    <header class="header back_image_1"><!--        HEADER           -->
+    <header class="header back_image_2"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="index.html"><img src="../img/logo.png"/></a>
 
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
           <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
             <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
             <li class="nav-item dropdown dropdown-backdrop">
-              <a class="nav__link dropdown-toggle hover" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Agencies
               </a>
               <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="agencies_bellinzona.html">Bellinzona</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Lugano</a></li>
+                <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
               </ul>
             </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
-            <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">Contact us</a></li>
+            <li class="nav__item"><a href="../contact-us.html" class="nav__link">IT</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
@@ -74,144 +73,38 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">lucarno</h1>
+      <h1 class="header--title">contact us</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
       <div class="center">
-        <section class="singel-page"><!--               section-one               -->
-          <div class="gallery">
-            <div class="gallery__container">
-              <div class="gallery__grid">
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/8b1cWDyvT7Y" />
-                    
-                  </figure>
-                </div>
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
-                  </figure>
-                </div>
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
-                  </figure>
-                </div>
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
-                  </figure>
-                </div>
-                <div>
-                  <figure class="gallery__img-container">
-                    <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
-                  </figure>
-                </div>
-              </div>
+        <section class="page-contact_us">
+          <div class="page-contact_us__title">
+            <h2>Contact Us</h2>
+            <p>Swing by for a cup of coffee, or leave us a message:</p>
+          </div>
+          <div class="page-contact_us__row">
+            <div class="page-contact_us__column">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.837188353819!2d9.01394011558205!3d46.193798479116346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47844a49838882c9%3A0x56b771a867ae6460!2sMoogi%20Kebab%20Pizza!5e0!3m2!1sde!2sch!4v1575486055624!5m2!1sde!2sch" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+            <div class="page-contact_us__column">
+              <form action="/action_page.php">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <label for="country">Country</label>
+                <select id="country" name="country">
+                  <option value="australia">Afghanistan</option>
+                  <option value="canada">Pakistan</option>
+                  <option value="usa">Ozbakistan</option>
+                </select>
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                <input type="submit" value="Submit">
+              </form>
             </div>
           </div>
-          <table>
-            <tr>
-              <td id="block" >Info</td>
-              <td>Our branch in Locarno has stood for you for over 5 years</td>
-            </tr>
-          </table>
-          <table>
-            <tr>
-              <td>Address :</td>
-              <td>Keltenstrasse 3, 3018 Bern</td>
-            </tr>
-            <tr>
-              <td>Phone number:</td>
-              <td>(+41) 79 897 42 58</td>
-            </tr>
-            <tr>
-              <td>Opening hours</td>
-              <td>
-                <table>
-                  <tr>
-                    <td>Mo - Fr :</td>
-                    <td>08:00 to 22:00 Clock</td>
-                  </tr>
-                  <tr>
-                    <td>Sa - So :</td>
-                    <td>08:00 to 22:00 Clock</td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-          <h3>menu</h3>
-          <div class="page-lucarno__menu">
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-            <div class="page-lucarno__div">
-              <img src="img/menu_1.jpg" />
-              <div>
-                <h3>Doner Kebab</h3>
-                <p>ghosht/kachalo/piyaz</p>
-                <h3 class="red">CHF 20</h3>
-              </div>
-            </div>
-
-          </div>
-
         </section>
       </div>
     </main><!--        END OF MAIN           -->
