--- a/EN/index.html
+++ b/EN/index.html
@@ -16,18 +16,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="js/javascript.js" defer></script>
-    <script src="js/navbar.js" defer></script>
+    <script src="../js/javascript.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 <body>
     <header class="header"><!--        HEADER           -->
       <div class="header__wrapper">
-        <a class="header__logo" href="#"><img src="img/logo.png"/></a>
+        <a class="header__logo" href="#"><img src="../img/logo.png"/></a>
        
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
@@ -46,8 +46,8 @@
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="EN/index.html" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="../index.html" class="nav__link">IT</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
@@ -92,11 +92,11 @@
             </div>
           </a>
           <a href="agencies_lucarno.html" class="agencies__img">
-            <img src="img/image_1.jpg" />
+            <img src="../img/image_1.jpg" />
           </a>
 
           <a href="agencies_bellinzona.html" class="agencies__img">
-            <img src="img/image_2.jpg" />
+            <img src="../img/image_2.jpg" />
           </a>
           <a href="agencies_bellinzona.html" class="agencies__info agencies__info2">
             <div class="agencies-background">
@@ -117,12 +117,12 @@
                   <div>
                     <h3>kebab focaccia1</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
                 <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-4 menus__part">
                   <div>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia2</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
@@ -131,12 +131,12 @@
                   <div>
                     <h3>kebab focaccia3</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
                 <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-4 menus__part">
                   <div>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia4</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
@@ -145,12 +145,12 @@
                   <div>
                     <h3>kebab focaccia5</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
                 <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-4 menus__part">
                   <div>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia6</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
@@ -159,12 +159,12 @@
                   <div>
                     <h3>kebab focaccia7</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                   </div>
                 </div>
                 <div class="carousel-item col-12 col-sm-4 col-md-4 col-lg-4 menus__part">
                   <div>
-                    <img src="img/Kebab-Focaccia.jpg" />
+                    <img src="../img/Kebab-Focaccia.jpg" />
                     <h3>kebab focaccia8</h3>
                     <p>insalata, pomodori, carote, salsa su richiesta</p>
                   </div>
