--- a/about-us.html
+++ b/about-us.html
@@ -46,8 +46,9 @@
               </ul>
             </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
             <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
