--- a/agencies_bellinzona.html
+++ b/agencies_bellinzona.html
@@ -36,7 +36,7 @@
           <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
             <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
             <li class="nav-item dropdown dropdown-backdrop">
-              <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav__link dropdown-toggle hover" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Agencies
               </a>
               <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
@@ -48,6 +48,7 @@
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
             <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
