--- a/menu.html
+++ b/menu.html
@@ -43,9 +43,10 @@
                 <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
               </ul>
             </li>
-            <li class="nav__item"><a href="#" class="nav__link">Menu</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
             <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
